syntax = "proto3";

import "arpc/proto/rpc_extensions.proto";
import "proto/GraphDef.proto";

package navi;
option cc_enable_arenas = true;
option cc_generic_services = true;

message NaviRequestDef {
    string biz_name = 1;
    string graph_name = 2;
    GraphDef graph = 3;
}

message NaviPortResponseDef {
}

message NaviResponseDef {
    repeated NaviPortResponseDef responses = 1;
    bytes navi_result = 2;
}

service NaviService {
    option (arpc.global_service_id) = 7;
    rpc runGraph(NaviRequestDef) returns(NaviResponseDef) {
        option (arpc.local_method_id) = 7;
    }
}
